wk_taa_taaqa/src/objects/Partner_Profile__c.object
<CustomObject>
    <fields>
        <fullName>AccountAccount__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Profiles</relationshipLabel>
        <relationshipName>Partner_Profiles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount_of_typical_deal__c</fullName>
        <label>Amount of typical deal?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Challenges__c</fullName>
        <inlineHelpText>Briefly describe any Sales Tax Functionality and/or challenges their customers face</inlineHelpText>
        <label>Challenges</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Company_Office_Locations__c</fullName>
        <label>Company Office Locations</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Current_commission_structure__c</fullName>
        <label>Current commission structure?</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Deals_per_year_with_competitor__c</fullName>
        <label>Deals per year with competitor</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Industries_Supported__c</fullName>
        <label>Industries Supported</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Likes_dislikes_with_current_competitor__c</fullName>
        <label>Likes &amp; dislikes with current competitor</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Number_of_ERP_seats__c</fullName>
        <inlineHelpText>Indicates size of customer</inlineHelpText>
        <label>Number of ERP seats</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_End_Customers__c</fullName>
        <inlineHelpText>Install base: Number of End-Customers?
By Vertical or ERP offering (if applicable)</inlineHelpText>
        <label>Number of End-Customers?</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Offices__c</fullName>
        <label>Number of Offices</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Growth_Plans__c</fullName>
        <label>Partner Growth Plans</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Platform_Technology__c</fullName>
        <inlineHelpText>(Cloud / On Premise / Both )</inlineHelpText>
        <label>Platform Technology</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <label>Primary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Profile</relationshipLabel>
        <relationshipName>Partner_profile</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Phone__c</fullName>
        <label>Primary Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Revenue_Deployment_Method__c</fullName>
        <inlineHelpText>(Direct / Reseller Channel / Both-give %)</inlineHelpText>
        <label>Revenue/Deployment Method</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>STG_Support_Products__c</fullName>
        <label>STG Support Products</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Strategy_for_displacing_competitor__c</fullName>
        <label>Strategy for displacing competitor</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Supported_Platform__c</fullName>
        <inlineHelpText>Use this field to define Supported Platforms for VAR Accounts</inlineHelpText>
        <label>Supported Platform</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Target_for_net_new_clients_by_ERP__c</fullName>
        <label>Target for net new clients by ERP</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>What_can_we_do_better__c</fullName>
        <label>What can we do better?</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Partner Profile</label>
    <nameField>
        <label>Partner Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>